# STERENOVA-TOOLS

./: .env.production  .gitignore  LICENSE  QUICK-START.md  README.md  configure-keycloak-theme.sh  docker-compose.prod.yml  docker-compose.yml  generate-secrets.sh  init-client-management-db.sh  start-sterenova.sh  test-auth-flow.sh
.github/: SECRETS.md
.github/workflows/: docker-build-push.yml
gateway/kong/: Dockerfile  kong.conf  kong.prod.yml  kong.yml
ops/observability/: alert_rules.yml  loki-config.yml  prometheus.yml  promtail-config.yml  tempo-config.yml
scripts/: new:service:backend.sh  new:service:frontend.sh  remove:service:frontend.sh
services/: README.md
services/backend-node-template/: Dockerfile  README.md  package-lock.json  package.json
services/backend-python-template/: Dockerfile  README.md  pyproject.toml
services/backend-python-template/app/: main.py
services/config-service/: Dockerfile  README.md  env.example  package-lock.json  package.json
services/sterenova-client-management/: Dockerfile  Dockerfile.dev  README.md  env.example  env.local  init-db.sql  package-lock.json  package.json
services/sterenova-flux-backend/: .gitignore  Dockerfile  Dockerfile.dev  README.md  env.example  env.local  jest.config.js  package-lock.json  package.json  project.config.json
services/sterenova-studio-backend/: DATABASE_FEATURES.md  Dockerfile  Dockerfile.dev  MIGRATION_SUMMARY.md  README.md  TEMPLATE_DEVELOPMENT.md  env.example  env.local  env.prod  init-db.sql  package-lock.json  package.json  release.sh  setup-database.sql
web/: README.md
(+226 files in other folders)
